--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,26 +17,27 @@
     "@angular/core": "^17.2.2",
     "@angular/forms": "^17.2.2",
     "@angular/material": "^17.2.1",
+    "@angular/material-moment-adapter": "^17.2.1",
     "@angular/platform-browser": "^17.2.2",
     "@angular/platform-browser-dynamic": "^17.2.2",
     "@angular/router": "^17.2.2",
     "@lagoshny/ngx-hateoas-client": "^3.8.1",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.4"
+    "rxjs": "7.8.1",
+    "tslib": "^2.6.2",
+    "zone.js": "0.14.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.1",
     "@angular/cli": "^17.2.1",
     "@angular/compiler-cli": "^17.2.2",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~5.3.3"
+    "@types/jasmine": "5.1.4",
+    "@types/node": "20.11.20",
+    "jasmine-core": "5.1.2",
+    "karma": "6.4.3",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-coverage": "2.2.1",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.1.0",
+    "typescript": "5.3.3"
   }
 }
